Suppression bouton Fermer

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -744,7 +744,7 @@
 
 	<div class="modal fade" id="modalTransfoAgile" tabindex="-1" role="dialog" aria-labelledby="modalTransfoAgileLabel"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-xl" role="document">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -786,11 +786,6 @@
 					<p style="text-align: justify">
 					Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
 					</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>
-						Fermer
-					</button>
 				</div>
 			</div>
 		</div>
