Ajout des photos des orateurs

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -230,8 +230,8 @@
 					<div>
 						<div class="debut heure">10h30</div>
 						<div class="salle heure">GC</div>
-						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modalTransfoAgile">
-							<div class="parent grid-item--height3"><!-- data-toggle="modal" data-target="#klaxoonBox"-->
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks">
+							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Transformation agile : arrêtons de suivre aveuglément des frameworks</h3>
 									<p>Denis MIGOT</p>
@@ -742,7 +742,7 @@
 		</button>
 	</div>
 
-	<div class="modal fade" id="modalTransfoAgile" tabindex="-1" role="dialog" aria-labelledby="modalTransfoAgileLabel"
+	<div class="modal fade" id="modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks" tabindex="-1" role="dialog" aria-labelledby="#modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks-label"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
