Deux modales à améliorer

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -248,7 +248,7 @@
 					<div>
 						<div class="debut heure">10h30</div>
 						<div class="salle heure">S1</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/agilo-park-un-serious-game-pour-apprendre-a-prioriser">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Agil'o Park, un serious game pour apprendre à prioriser</h3>
@@ -263,7 +263,7 @@
 					<div>
 						<div class="debut heure">10h30</div>
 						<div class="salle heure">S2</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/software-craftsmanship-il-est-temps-d-elever-le-niveau">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-software-craftsmanship-il-est-temps-d-elever-le-niveau">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Software Craftmanship : il est temps d'élever le niveau</h3>
@@ -785,6 +785,90 @@
 					<br/>
 					<p style="text-align: justify">
 					Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser" tabindex="-1" role="dialog" aria-labelledby="#modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Transformation agile : arrêtons de suivre aveuglément des frameworks</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p>Découvrez le rôle de Product Owner en vous glissant dans la peau d’un gérant de parc attraction.&nbsp;</p>
+					<p>Prioriser astucieusement votre backlog pour maximiser votre score ... et construisez votre parc sprint après sprint.</p>
+					<p>Mais attention, comme dans la vraie vie, votre capacité n’est pas toujours celle estimée, les anomalies guettent et peut-être serez-vous amener à re-prioriser<br><br>
+						<p>Créé par nous mêmes et expérimenté à plusieurs reprises, Agil'o Park est un serious game basé sur un plateau et des cartes permettant de se sensibiliser à la facette de priorisation du métier de Product Owner.</p>
+					<p>Il n'y a pas de bonne ou mauvaise priorisation mais une définition d'une stratégie initiale et l'adaptation aux aléas ... l'agilité quoi !<br><br>
+					<hr/>
+
+					<div>
+						<img src="orateurs/denis-migot.jpg" style="height:8rem"/>
+						Denis Migot - <a href="https://twitter.com/DenisMigot">@DenisMigot</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-software-craftsmanship-il-est-temps-d-elever-le-niveau" tabindex="-1" role="dialog" aria-labelledby="#modal-software-craftsmanship-il-est-temps-d-elever-le-niveau-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Transformation agile : arrêtons de suivre aveuglément des frameworks</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						70% des changements organisationnels échouent.
+					</p>
+					<br/>
+					<p style="text-align: justify">
+						Vous avez sûrement entendu ce chiffre à de nombreuses reprises pourtant… Cette statistique, répétée à l’unisson par de nombreux conférenciers, est un mythe. Un mythe tenace qui a un effet dévastateur : il rend, dans l’imaginaire collectif, le changement au sein d’une organisation difficile voire impossible, il impose inconsciemment le suivi scrupuleux d’un framework (SAFe, LeSS, Nexus…) pour éviter tout échec. Seulement, imiter aveuglément un framework est un piège.
+					</p>
+					<br/>
+					<p style="text-align: justify">
+						Bien lancer et réussir la transformation de son entreprise ne dépend pas d'un cadre ou d'une méthode. C'est un effort, long certes, mais à la portée de tous à condition de se poser les bonnes questions.
+					</p>
+					<br/>
+					<p style="text-align: justify">
+						Objectif :
+					</p>
+					<br/>
+					<p style="text-align: justify">
+						Démystifier le changement organisationnel et présenter les bonnes questions à se poser au bon moment pour réussir une transformation.
+					</p>
+					<hr/>
+
+					<div>
+						<img src="orateurs/denis-migot.jpg" style="height:8rem"/>
+						Denis Migot - <a href="https://twitter.com/DenisMigot">@DenisMigot</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
 					</p>
 				</div>
 			</div>
