Kiffer son job ca booste

--- a/tests/samedi_v2.html
+++ b/tests/samedi_v2.html
@@ -243,11 +243,11 @@
 				<!------------------------------->
 				<!-- Atelier matinée session 1 -->
 				<!------------------------------->
-				<div class="grid-item grid-item--height3 c1 AM2 CF" style="position: absolute; left: 0%; top: 442px; opacity: 1; width: 16.4%;">
+				<div class="grid-item grid-item--height3 c1 AM2 RE" style="position: absolute; left: 0%; top: 442px; opacity: 1; width: 16.4%;">
 					<div>
 						<div class="debut heure">10h50</div>
 						<div class="salle heure">GC</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/kiffer-son-job-ca-booste">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-kiffer-son-job-ca-booste">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Kiffer son job, ça booste !</h3>
@@ -736,7 +736,50 @@
 			<i class="material-icons" style="font-size:3em; color:#ff6600;">info</i>
 		</button>
 	</div>
-	
+
+	<div class="modal fade" id="modal-kiffer-son-job-ca-booste" tabindex="-1" role="dialog" aria-labelledby="#modal-kiffer-son-job-ca-booste-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Kiffer son job, ça booste!</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="RE" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Retour d'expérience</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+					La performance collective, ça passe par des individus motivés et investis dans leur mission. Oui mais si leur mission n’est plus en phase avec leur élan de vie ? Comment se positionner dans l’équipe, dans l’organisation, et plus globalement dans notre vie, pour se réaliser pleinement, et ainsi donner le meilleur de soi-même ?
+					</p>
+					<br/>
+					<p style="text-align: justify">
+					C’est la conférence que je vous propose, issue d’un REX de changement de posture.
+					</p>
+					<br/>
+					<p style="text-align: justify">
+					Et si vous aussi, vous laissiez émerger le job de vos rêves ?
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/carole-v.jpg" style="height:8rem"/>
+						Carole Vinerier - <a href="https://twitter.com/DenisMigot">@CaroleVinerier</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Coach, conférencière et formatrice en Communication Consciente & Bienveillante, je partage des prises de conscience, un processus et un état d’esprit profondément humain issus de la CNV holistique. A partir de vécus et de mises en pratique, pour que chacun s’approprie cette manière d’être à soi et d’être à l’autre. Par ailleurs, j'accompagne des personnes et des équipes dans leurs démarches de changement et d’évolution.
+					</p>
+					<p style="text-align: justify">
+						Pour une entreprise plus humaine, axée sur le sens.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<!-- Bootstrap -->
