qchevance: J'ai fais 4 modales

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -274,11 +274,11 @@
 						<div class="fin heure">11h30</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--height6 c4 AM2 CF" style="position: absolute; left: 49.8%; top: 442px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);">
+				<div class="grid-item grid-item--height6 c4 AM2 AJ" style="position: absolute; left: 49.8%; top: 442px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);">
 					<div>
 						<div class="debut heure">10h30</div>
 						<div class="salle heure">S3</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/initiation-a-la-syste-mique-interactionnelle">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-initiation-a-la-syste-mique-interactionnelle">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Initiation à la Systémique interactionnelle</h3>
@@ -293,7 +293,7 @@
 					<div>
 						<div class="debut heure">10h30</div>
 						<div class="salle heure">S4</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/facilitation-graphique-passez-a-laction">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-facilitation-graphique-passez-a-laction">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Facilitation Graphique, passez à l'action !</h3>
@@ -797,29 +797,41 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Transformation agile : arrêtons de suivre aveuglément des frameworks</h2>
+						<h2>Agil'o Park, un serious game pour apprendre à prioriser</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
 					<div style="display:flex">
-						<div class="CF" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Conférence</div>
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier / Jeu</div>
 					</div>
 					<hr/>
-					<p>Découvrez le rôle de Product Owner en vous glissant dans la peau d’un gérant de parc attraction.&nbsp;</p>
-					<p>Prioriser astucieusement votre backlog pour maximiser votre score ... et construisez votre parc sprint après sprint.</p>
-					<p>Mais attention, comme dans la vraie vie, votre capacité n’est pas toujours celle estimée, les anomalies guettent et peut-être serez-vous amener à re-prioriser<br><br>
-						<p>Créé par nous mêmes et expérimenté à plusieurs reprises, Agil'o Park est un serious game basé sur un plateau et des cartes permettant de se sensibiliser à la facette de priorisation du métier de Product Owner.</p>
-					<p>Il n'y a pas de bonne ou mauvaise priorisation mais une définition d'une stratégie initiale et l'adaptation aux aléas ... l'agilité quoi !<br><br>
+					<p style="text-align: justify">Découvrez le rôle de Product Owner en vous glissant dans la peau d’un gérant de parc attraction.&nbsp;</p>
+					<p style="text-align: justify">Prioriser astucieusement votre backlog pour maximiser votre score ... et construisez votre parc sprint après sprint.</p>
+					<p style="text-align: justify">Mais attention, comme dans la vraie vie, votre capacité n’est pas toujours celle estimée, les anomalies guettent et peut-être serez-vous amener à re-prioriser<br><br>
+						<p style="text-align: justify">Créé par nous mêmes et expérimenté à plusieurs reprises, Agil'o Park est un serious game basé sur un plateau et des cartes permettant de se sensibiliser à la facette de priorisation du métier de Product Owner.</p>
+					<p style="text-align: justify">Il n'y a pas de bonne ou mauvaise priorisation mais une définition d'une stratégie initiale et l'adaptation aux aléas ... l'agilité quoi !<br><br>
 					<hr/>
 
 					<div>
-						<img src="orateurs/denis-migot.jpg" style="height:8rem"/>
-						Denis Migot - <a href="https://twitter.com/DenisMigot">@DenisMigot</a>
+						<img src="orateurs/antony-guilloteau.png" style="height:8rem"/>
+						Antony GUILLOTEAU - <a href="https://twitter.com/aguilloteau">@aguilloteau</a>
 					</div>
 					<br/>
 					<p style="text-align: justify">
-						Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
+						Après avoir évolué pendant une dizaine d’années dans le développement IT en tant que développeur, architecte, lead dev, Antony a fait le grand saut dans l’agilité en 2012.
+Manager reconnu chez Voyages-SNCF, il a ensuite enrichi sa boîte à outils avec la facilitation et le Design Thinking.
+Son point fort ? Accompagner à la fois les Product Owner dans la construction de leur vision et l’élaboration de leur backlog, soutenir les équipes de réalisation dans leurs démarches d’amélioration continue et les orienter vers une démarche DevOps, conseiller les managers dans leur changement de posture.
+Facilitateur, coach, formateur, il explore tous les jours de nouvelles pratiques pour rendre les équipes plus agiles et performantes.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/aurelie-robert.jpg" style="height:8rem"/>
+						Aurelie ROBERT
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je mélange culture agile,  Management 3.0 et facilitation UX, pour dynamiser le quotidien des équipes et des organisations de tous domaines (informatique, RH...) dans la conception d'un produit ou la mise en place d'une organisation.
 					</p>
 				</div>
 			</div>
@@ -832,7 +844,7 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Transformation agile : arrêtons de suivre aveuglément des frameworks</h2>
+						<h2>Software Craftsmanship : il est temps d’élever le niveau</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -841,34 +853,125 @@
 						<div style="margin-left:1rem">Conférence</div>
 					</div>
 					<hr/>
-					<p style="text-align: justify">
-						70% des changements organisationnels échouent.
-					</p>
-					<br/>
-					<p style="text-align: justify">
-						Vous avez sûrement entendu ce chiffre à de nombreuses reprises pourtant… Cette statistique, répétée à l’unisson par de nombreux conférenciers, est un mythe. Un mythe tenace qui a un effet dévastateur : il rend, dans l’imaginaire collectif, le changement au sein d’une organisation difficile voire impossible, il impose inconsciemment le suivi scrupuleux d’un framework (SAFe, LeSS, Nexus…) pour éviter tout échec. Seulement, imiter aveuglément un framework est un piège.
-					</p>
-					<br/>
-					<p style="text-align: justify">
-						Bien lancer et réussir la transformation de son entreprise ne dépend pas d'un cadre ou d'une méthode. C'est un effort, long certes, mais à la portée de tous à condition de se poser les bonnes questions.
-					</p>
-					<br/>
-					<p style="text-align: justify">
-						Objectif :
-					</p>
-					<br/>
-					<p style="text-align: justify">
-						Démystifier le changement organisationnel et présenter les bonnes questions à se poser au bon moment pour réussir une transformation.
-					</p>
+					<p style="text-align: justify">Et si le manifeste agile avait oublié un aspect majeur de la pratique du développement, et si on avait oublié le plus important : la technique ! Développer un logiciel fonctionnel et bien conçu, voici l’objectif des Craftsmen. Nous allons voir ensemble, comment diffuser ces nouvelles valeurs au sein de vos équipes.</p>
+					<p style="text-align: justify">Rappeler l’importance d’un code maintenable et fiable.</p>
+					<p style="text-align: justify">Expliquer les principes majeurs du Software Craftsmanship.</p>
+					<p style="text-align: justify">Finir par une bonne punchline !</p>
 					<hr/>
 
 					<div>
-						<img src="orateurs/denis-migot.jpg" style="height:8rem"/>
-						Denis Migot - <a href="https://twitter.com/DenisMigot">@DenisMigot</a>
+						<img src="orateurs/nassim.jpg" style="height:8rem"/>
+						Nassim Masmoudi - <a href="https://twitter.com/masmoudi_nassim">@masmoudi_nassim</a>
 					</div>
 					<br/>
 					<p style="text-align: justify">
-						Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
+						Nassim Masmoudi,
+Fan de football et de basket, je travaille à Infotel depuis presque 5 ans.
+Tech Lead depuis un an et demi. C'est à ce moment que je découvre le Software Craftsmanship. 
+Je partage mon temps entre le développement sur des projets et la diffusion de mes connaissances.
+Mon but est d'accompagner tout le monde afin d’élever le niveau. 
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-initiation-a-la-syste-mique-interactionnelle"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Initiation à la Systémique interactionnelle</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier / Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Quand une relation est difficile, on aimerait disposer d’une télécommande pour changer l’autre !
+						<br>Malheureusement ( ou pas !) cela n’est pas possible.
+						<br>Au travers d’études de cas, cet atelier propose pour résoudre ce genre de problèmes de vous initier au modèle d'intervention systémique et stratégique de Palo-Alto .
+						<br>Il s’agit d’abord de comprendre les processus dysfonctionnels relationnels. Ensuite, d’adopter une stratégie spécifique d’amélioration de la situation.
+						<br>Nous utiliserons pour cela une grille de représentation des interactions et des boucles de feedback. Nous verrons en particulier comment la compréhension des tentatives de solutions infructueuses nous amènera à proposer des prescriptions paradoxales.
+						<br>Découvrez le réducteur de complexité proposé par le modèle de Palo-Alto et l’apport fondamental que constitue l’approche stratégique.
+						<br>Vous êtes familier de l’agilité, mais vous ne connaissez pas la systémique. Le manifeste agile mentionne l’importance privilégiée à accorder aux \"Individus et à leurs interactions\". Le modèle de Palo-Alto propose justement une démarche stratégique focalisée sur l’aspect interactionnel des dysfonctionnements.
+						<br>Vous ne connaissez ni la systémique, ni l’agilité, mais vous êtes curieux d’en savoir plus sur une démarche non normative, considérant que tout problème est une question de perception de sa relation à soi-même, aux autres ou au monde. Venez découvrir en pratiquant sur des cas du monde de l’entreprise.
+					</p>
+					<p style="text-align: justify">Conférence (présentation des concepts)</p>
+					<p style="text-align: justify">Atelier : étude d'un premier cas ensemble</p>
+					<p style="text-align: justify">puis étude d'un 2ème cas en sous-groupes</p>
+					<p style="text-align: justify">Objectifs :&nbsp;</p>
+					<ul>
+						<li>utiliser une grille de représentation des interactions et des boucles de feedback</li>
+						<li>Comprendre la circularité des processus relationnels dysfonctionnels</li>
+						<li>Adopter une stratégie spécifique d’amélioration de la situation</li>
+					</ul>
+					<hr/>
+
+					<div>
+						<img src="orateurs/christophe-keromen.jpeg" style="height:8rem"/>
+						Christophe Keromen - <a href="https://twitter.com/ckeromen">@ckeromen</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+							Catalyseur respectueux de transformation continue et systémique 
+							J'aide les personnes, les collectifs, les organisations à mobiliser leurs ressources pour s’harmoniser et atteindre leurs objectifs.
+							J'accompagne le changement de perception, de comportement et de ressenti, pour plus de fluidité dans l’incertitude. 
+							Contribuer à faire émerger un nouvel univers de la possibilité. Encourager l’harmonie. Voir les yeux briller. Voilà ma mission.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-facilitation-graphique-passez-a-laction"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Facilitation Graphique, passez à l'action !</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier / Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">Vous avez déjà entendu parler de Facilitation Graphique, Sketchnoting, Scribing, Facilitation Visuelle, Mindmapping, Pensée Visuelle, etc., et vous êtes perdus ?</p>
+					<p style="text-align: justify">Vous avez décidé de vous mettre à la Facilitation Graphique mais vous avez le syndrome de la page blanche ?</p><p>Alors cet atelier est fait pour vous !</p>
+					<p style="text-align: justify">\"Seul on va plus vite, ensemble on va plus loin\", ensemble nous allons imaginer comment intégrer la Facilitation Graphique dans notre quotidien : à la maison, au travail, dans vos activités préférées... Pour enfin se lancer et ne plus s'arrêter !</p>
+					<p style="text-align: justify">Après un rappel des bases et principes, nous alternerons travail par petits groupes et échanges avec le collectif pour faire émerger des idées et imaginer ensemble comment intégrer la Facilitation Graphique dans notre quotidien.</p>
+					<hr/>
+
+					<div>
+						<img src="orateurs/fany.jpg" style="height:8rem"/>
+						Fany Berthelot - <a href="https://twitter.com/Fanyberthelot">@Fanyberthelot</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+							Analyste fonctionnelle et maman de 3 enfants, je suis convaincue de l’efficacité des illustrations pour  transmettre un message en racontant une histoire. Au travail comme à la maison je pratique  la facilitation graphique dans mon quotidien depuis plus de 2 ans.
+
+Au travail pour analyser et synthétiser un besoin utilisateur, faciliter les échanges et faire émerger des idées. A la maison pour apprendre les leçons  avec les enfants et l’organisation de la famille.
+J’organise et anime des ateliers sur la facilitation graphique, j’ai participé à Agile Tours Rennes 2018 et Agile Laval 2019. 
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/fany-estelle.JPG" style="height:8rem"/>
+						Estelle Viot - <a href="https://twitter.com/EstelleViot">@EstelleViot</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+							Aujourd'hui sur des missions de pilotage et de Scrum Master au sein d'une ESN, je suis attirée depuis toujours par tout ce qui touche au graphisme, aux feutres... Depuis que j'ai découvert la facilitation graphique, je l'utilise au quotidien pour ma prise de notes ou l'animation de réunions : aller à l'essentiel & jouer avec le graphisme pour plus de clarté.
+					</p>
+					<hr/>
+					<p style="text-align: justify">
+						Ensemble, nous co-animons depuis 2 ans des ateliers autour de la Facilitation Graphique, nous avons participé à Agile Laval en tant qu'animatrices et scribeuses et notre objectif est de rendre la facilitation graphique accessible à tous :)
 					</p>
 				</div>
 			</div>
